--- a/chessboard/chessboard/src/components/Board.css
+++ b/chessboard/chessboard/src/components/Board.css
@@ -7,5 +7,6 @@
   grid-template-columns: repeat(8, 70px);
   grid-template-rows: repeat(8, 70px);
   grid-auto-flow: row;
-  border: 1px solid black;
+  grid-g: 0;
+  border: 2px solid black;
 }
