--- a/chessboard/chessboard/src/components/Cell.css
+++ b/chessboard/chessboard/src/components/Cell.css
@@ -1,9 +1,11 @@
 .whiteCell {
   padding-top: 12px;
   background-color: white;
+  border: 1px solid grey;
 }
 
 .blackCell {
   padding-top: 12px;
   background-color: lightblue;
+  border: 1px solid grey;
 }
