--- a/chessboard/chessboard/src/components/Board.css
+++ b/chessboard/chessboard/src/components/Board.css
@@ -7,6 +7,6 @@
   grid-template-columns: repeat(8, 70px);
   grid-template-rows: repeat(8, 70px);
   grid-auto-flow: row;
-  grid-g: 0;
+  grid-gap: 0;
   border: 2px solid black;
 }
